trunk/Archive2/1b/ad032f7db27ae0/output
In file included from /usr/include/c++/4.8/map:60:0,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/stl_tree.h: In instantiation of 'void std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_M_insert_unique(_II, _II) [with _InputIterator = int; _Key = int; _Val = std::pair<const int, int>; _KeyOfValue = std::_Select1st<std::pair<const int, int> >; _Compare = std::less<int>; _Alloc = std::allocator<std::pair<const int, int> >]':
/usr/include/c++/4.8/bits/stl_map.h:671:11:   required from 'void std::map<_Key, _Tp, _Compare, _Alloc>::insert(_InputIterator, _InputIterator) [with _InputIterator = int; _Key = int; _Tp = int; _Compare = std::less<int>; _Alloc = std::allocator<std::pair<const int, int> >]'
main.cpp:6:17:   required from here
/usr/include/c++/4.8/bits/stl_tree.h:1719:29: error: invalid type argument of unary '*' (have 'int')
    _M_insert_unique_(end(), *__first);
                             ^
